@@ -44,6 +44,8 @@ struct linestack_context;
 enum network_connection_state { 
 		NETWORK_CONNECTION_STATE_NOT_CONNECTED = 0, 
 		NETWORK_CONNECTION_STATE_RECONNECT_PENDING,
+		NETWORK_CONNECTION_STATE_CONNECTING,
+		NETWORK_CONNECTION_STATE_CONNECTED,
 		NETWORK_CONNECTION_STATE_LOGIN_SENT, 
 		NETWORK_CONNECTION_STATE_MOTD_RECVD,
 };
